--- a/app/src/main/res/drawable/circle_blue_light.xml
+++ b/app/src/main/res/drawable/circle_blue_light.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="oval">
-    <solid android:color="#dcfce7" /> <!-- Green-100 -->
+    <solid android:color="#1a13c8ec" /> <!-- Primary Blue 10% opacity -->
     <size android:width="40dp" android:height="40dp"/>
 </shape>
