--- a/app/src/main/res/layout/activity_inventory.xml
+++ b/app/src/main/res/layout/activity_inventory.xml
@@ -29,13 +29,16 @@
             android:focusable="true" />
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Inventory"
+            android:layout_weight="1"
+            android:text="Select Brand"
             android:textColor="@color/text_dark"
-            android:textSize="20sp"
+            android:textSize="18sp"
             android:textStyle="bold"
-            android:layout_marginStart="16dp" />
+            android:gravity="center"
+            android:layout_marginEnd="40dp" 
+            />
     </LinearLayout>
 
     <ProgressBar
