--- a/app/src/main/res/drawable/ic_app_registration.xml
+++ b/app/src/main/res/drawable/ic_app_registration.xml
@@ -2,7 +2,9 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="@android:color/black"
-        android:pathData="M10,9h4V6h3l-5,-5 -5,5h3v3zm-1,1H6V7l-5,5 5,5v-3h3v-4zm14,2l-5,-5v3h-3v4h3v3l5,-5zm-9,3h-4v3H7l5,5 5,-5h-3v-3z"/>
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M10,4h4v4h-4zM10,10h4v4h-4zM10,16h4v4h-4zM4,4h4v4h-4zM4,10h4v4h-4zM4,16h4v4h-4zM16,4h4v4h-4zM16,10h4v4h-4zM16,16h4v4h-4z"/>
 </vector>
