--- a/app/src/main/res/drawable/ic_person_search.xml
+++ b/app/src/main/res/drawable/ic_person_search.xml
@@ -2,11 +2,15 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="@android:color/black"
-        android:pathData="M10,12c2.21,0 4,-1.79 4,-4s-1.79,-4 -4,-4 -4,1.79 -4,4 1.79,4 4,4zM10,6c1.1,0 2,0.9 2,2s-0.9,2 -2,2 -2,-0.9 -2,-2 0.9,-2 2,-2z"/>
-    <path android:fillColor="@android:color/black"
-        android:pathData="M4,18c0.22,-0.72 3.31,-2 6,-2c0.7,0 1.37,0.05 2,0.15C11.26,15.09 10,13.21 10,11c0,-1.08 0.25,-2.1 0.7,-3H4v11z"/>
-    <path android:fillColor="@android:color/black"
-        android:pathData="M20.31,17.9l2.29,2.3c0.39,0.39 0.39,1.02 0,1.41s-1.02,0.39 -1.41,0l-2.3,-2.29c-0.8,0.52 -1.74,0.83 -2.76,0.83 -2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5c0,1.02 -0.31,1.96 -0.83,2.74zM16.5,13c-1.65,0 -3,1.35 -3,3s1.35,3 3,3 3,-1.35 3,-3 -1.35,-3 -3,-3z"/>
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M15.5,14h-0.79l-0.28,-0.27C15.41,12.59 16,11.11 16,9.5C16,5.91 13.09,3 9.5,3S3,5.91 3,9.5S5.91,16 9.5,16c1.61,0 3.09,-0.59 4.23,-1.57l0.27,0.28v0.79l5,4.99L20.49,19l-4.99,-5zM9.5,14C7.01,14 5,11.99 5,9.5S7.01,5 9.5,5S14,7.01 14,9.5S11.99,14 9.5,14z"/>
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M12 10h-2v2H9v-2H7V9h2V7h1v2h2v1z" /> <!-- Plus to indicate searching/adding person? Actually person search usually has person inside loop. This is just search. Let's look for user icon. -->
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M9.5,9.5 m-2.5,0 a2.5,2.5 0 1,0 5,0 a2.5,2.5 0 1,0 -5,0" />
 </vector>
