--- a/app/src/main/res/drawable/ic_point_of_sale.xml
+++ b/app/src/main/res/drawable/ic_point_of_sale.xml
@@ -2,9 +2,9 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="@android:color/black"
-        android:pathData="M19,2H5c-1.11,0 -2,0.89 -2,2v14c0,1.1 0.89,2 2,2h14c1.1,0 2,-0.9 2,-2V4c0,-1.11 -0.9,-2 -2,-2zm0,16H5V4h14v14z"/>
-    <path android:fillColor="@android:color/black"
-        android:pathData="M11,10h2v2h-2zM11,14h2v2h-2zM15,10h2v2h-2zM7,10h2v2H7zM15,14h2v2h-2zM7,14h2v2H7zM17,6H7v2h10z"/>
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M19,2H5C3.89,2 3,2.89 3,4v16c0,1.11 0.89,2 2,2h14c1.11,0 2,-0.89 2,-2V4C21,2.89 20.11,2 19,2zM10,18H6v-5h4V18zM10,12H6V7h4V12zM13,18h-2V7h2V18zM18,18H14v-5h4V18zM18,12H14V7h4V12z"/>
 </vector>
