--- a/app/src/main/res/drawable/ic_receipt_long.xml
+++ b/app/src/main/res/drawable/ic_receipt_long.xml
@@ -1,10 +1,10 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M19.5,3.5L18,2l-1.5,1.5L15,2l-1.5,1.5L12,2l-1.5,1.5L9,2 7.5,3.5 6,2v14H3v3c0,1.66 1.34,3 3,3h12c1.66,0 3,-1.34 3,-3L21,2l-1.5,1.5zM15,20L6,20c-0.55,0 -1,-0.45 -1,-1s0.45,-1 1,-1h9v2zM19,19c0,0.55 -0.45,1 -1,1s-1,-0.45 -1,-1v-3L8,16L8,5h11v14z" />
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M19.5,3.5L18,2l-1.5,1.5L15,2l-1.5,1.5L12,2l-1.5,1.5L9,2L7.5,3.5L6,2L4.5,3.5L3,2v20l1.5,-1.5L6,22l1.5,-1.5L9,22l1.5,-1.5L12,22l1.5,-1.5L15,22l1.5,-1.5L18,22l1.5,-1.5L21,22V2l-1.5,1.5zM19,19.5l-1.5,1.5l-1.5,-1.5l-1.5,1.5l-1.5,-1.5l-1.5,1.5l-1.5,-1.5L9,19.5l-1.5,-1.5L6,19.5l-1.5,-1.5v-14l1.5,1.5L7.5,4L9,5.5L10.5,4L12,5.5L13.5,4L15,5.5L16.5,4L18,5.5L19.5,4v15.5zM7,7h10v2h-10zM7,11h10v2h-10zM7,15h7v2h-7z"/>
 </vector>
