--- a/app/src/main/res/drawable/ic_swap_horiz.xml
+++ b/app/src/main/res/drawable/ic_swap_horiz.xml
@@ -2,7 +2,18 @@
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24">
-    <path android:fillColor="@android:color/black"
-        android:pathData="M6.99,11L3,15l3.99,4v-3H14v-2H6.99v-3zM21,9l-3.99,-4v3H10v2h7.01v3L21,9z"/>
+    android:viewportHeight="24"
+    android:tint="?attr/colorControlNormal">
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M16.59,8.59L12,13.17 7.41,8.59 6,10l6,6 6,-6z"/>
+  <!-- Just using placeholder path if specific check not available or reuse check circle? 
+       Actually let's use the proper path for "Swap Horiz" or similar if we can guess.
+       Wait, I am creating specific icons. I should use correct paths. 
+       Use generic paths for now for speed if I don't have exact, but "Swap Horiz" is distinct.
+       M6.99,11L3,15l3.99,4v-3H14v-2H6.99v-3zM21,9l-3.99,-4v3H10v2h7.01v3L21,9z
+  -->
+  <path
+      android:fillColor="@android:color/white"
+      android:pathData="M6.99,11L3,15l3.99,4v-3H14v-2H6.99v-3zM21,9l-3.99,-4v3H10v2h7.01v3L21,9z"/>
 </vector>
